--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+  margin: 0;
+  font-family: 'Kumbh Sans', sans-serif;
+}
+
 .outer {
   display: flex;
   justify-content: center;
@@ -10,7 +15,6 @@
   background: #ffffff;
   width: 850px;
   height: fit-content;
-  padding: 20px;
   padding-bottom: 40px;
   border-radius: 20px;
   box-shadow: 0px 1px 0px rgba(121, 120, 120, 0.3);
@@ -51,7 +55,9 @@
   width: 15px;
 }
 
-@media (max-width: 767px) {
+
+
+@media (max-width: 768px) {
   .outer {
     padding: 10px;
     height: 100vh;
@@ -69,7 +75,7 @@
     right: 300px;
     position: absolute;
     left: 20%;
-    top: 9%;
+    top: 0%;
     transform: translateY(-50%);
     width: 60%;
     height: auto;
@@ -79,7 +85,7 @@
     position: absolute;
     width: 50%;
     left: 25%;
-    top: 1%;
+    top: -8%;
   }
   .faq-title {
     text-align: center;
